# AoC

2021/haskell/: aoc.cabal
2021/haskell/.stack-work/: stack.sqlite3
2021/haskell/.stack-work/install/x86_64-linux-tinfo6/233d00bbaa0f8f4705fcb45caf198a8a00331c2177baf37b4257f74f2efc7e38/8.10.7/lib/x86_64-linux-ghc-8.10.7/aoc-0.0.1-IrFHBH2Ii2S8E0xHb0uUCz/: Day1.dyn_hi  Day1.hi  Day2.dyn_hi
2021/haskell/.stack-work/install/x86_64-linux-tinfo6/233d00bbaa0f8f4705fcb45caf198a8a00331c2177baf37b4257f74f2efc7e38/8.10.7/pkgdb/: aoc-0.0.1-IrFHBH2Ii2S8E0xHb0uUCz.conf  package.cache
2021/haskell/lib/: Day1.hs  Day2.hs
2021/haskell/src/: Main.hs
2021/py/: main.py
2021/py/w1/: d1.py  d2.py
