cabal-version: 2.2
name: aoc
version: 0.0.1

library
  hs-source-dirs: lib
  default-language: Haskell2010
  build-depends: base >= 4.14.3.0 && < 4.15
  exposed-modules: Day1

executable aoc
  main-is: Main.hs
  hs-source-dirs: src
  default-language: Haskell2010
  build-depends: base >= 4.14.3.0 && < 4.15 
               , aoc
